--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "gulp-concat": "^2.4.0",
         "gulp-connect": "^2.0.6",
         "gulp-less": "^1.3.5",
+        "gulp-sass": "^1.3.3",
         "gulp-minify-css": "^0.3.8",
         "gulp-rename": "^1.2.0",
         "gulp-rimraf": "^0.1.0",
