Include less and scss files in bower package

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
         "!bower.json",
         "!README.md",
         "!dist/css",
-        "!dist/fonts"
+        "!dist/fonts",
+        "!less",
+        "!scss"
     ],
     "dependencies": {}
 }
